# pong-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  annotated.html  classes.html  classpong_1_1math_1_1Vector2D-members.html  classpong_1_1math_1_1Vector2D.html  classpong_1_1physics_1_1BoxCollider-members.html  classpong_1_1physics_1_1BoxCollider.html  classpong_1_1physics_1_1CollisionEvent-members.html  classpong_1_1physics_1_1CollisionEvent.html  classpong_1_1physics_1_1CollisionEventProcessor-members.html  classpong_1_1physics_1_1CollisionEventProcessor.html  classpong_1_1physics_1_1CollisionSystem-members.html  classpong_1_1physics_1_1CollisionSystem.html  classpong_1_1physics_1_1MovementSystem-members.html  classpong_1_1physics_1_1MovementSystem.html  classpong_1_1physics_1_1RigidBody-members.html  classpong_1_1physics_1_1RigidBody.html  classpong_1_1rendering_1_1ITexture-members.html  classpong_1_1rendering_1_1ITexture.html  classpong_1_1rendering_1_1RenderingSystem-members.html  classpong_1_1rendering_1_1RenderingSystem.html  classpong_1_1rendering_1_1SDLRenderer-members.html  classpong_1_1rendering_1_1SDLRenderer.html  classpong_1_1rendering_1_1SDLWindow-members.html  classpong_1_1rendering_1_1SDLWindow.html  classpong_1_1rendering_1_1ScreenPositionCalculator-members.html  classpong_1_1rendering_1_1ScreenPositionCalculator.html  classpong_1_1rendering_1_1Sprite-members.html  classpong_1_1rendering_1_1Sprite.html  classpong_1_1rendering_1_1Texture-members.html  classpong_1_1rendering_1_1Texture.html  classpong_1_1world_1_1Clock-members.html  classpong_1_1world_1_1Clock.html  classpong_1_1world_1_1Component-members.html  classpong_1_1world_1_1Component.html  (+37 more)
.github/workflows/: build-test-lint.yml  clang-format.yml  docs-pages.yml  run-tests.yml
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt  math.cpp  math.hpp
lib/includes/: components.hpp  events.hpp  math.hpp  multimedia.hpp  physics.hpp  rendering.hpp  rendering_utils.hpp  world.hpp
lib/physics/: box_collider.cpp  collision_event.cpp  collision_eventprocessor.cpp  collision_system.cpp  physics.hpp  physics_system.cpp  rigidbody.cpp
lib/rendering/: rendering.hpp  rendering_system.cpp  screen_position_calculator.cpp  sprite.cpp  surface.cpp  texture.cpp  utils.hpp
lib/src/: math.cpp
lib/src/multimedia/: multimedia_system.cpp  system_eventprocessor.cpp
lib/src/physics/: box_collider.cpp  collision_event.cpp  collision_eventprocessor.cpp  collision_system.cpp  movement_system.cpp  physics_system.cpp  rigidbody.cpp
lib/src/rendering/: rendering_system.cpp  screen_position_calculator.cpp  sdl_renderer.cpp  sdl_window.cpp  sprite.cpp  surface.cpp  texture.cpp  window_position.cpp
lib/src/world/: clock.cpp  entity.cpp  world.cpp
lib/src/world/events/: events.cpp
lib/world/: clock.cpp  components.hpp  entity.cpp  world.cpp  world.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
src/: CMakeLists.txt  main.cpp
src/world/: entity.cpp  world.cpp  world.hpp
tests/: CMakeLists.txt  radian_degree_tests.cpp  test_utility.cpp  tests.cpp  vector2d_tests.cpp  world_tests.cpp
tests/includes/: event_doubles.hpp  rendering_doubles.hpp  test_utility.hpp  world_doubles.hpp
tests/physics/: box_collider_tests.cpp  collision_eventprocessor_tests.cpp  collision_system_tests.cpp  physics_tests.cpp
tests/physics/test_doubles/stub/: clock_stub.cpp
tests/rendering/: screen_position_calculator_tests.cpp  sprite_tests.cpp
tests/rendering/test_doubles/fakes/: fake_surface.cpp  fake_texture.cpp
tests/src/: radian_degree_tests.cpp  test_utility.cpp  vector2d_tests.cpp
tests/src/physics/: box_collider_tests.cpp  collision_eventprocessor_tests.cpp  collision_system_tests.cpp  physics_tests.cpp
tests/src/rendering/: screen_position_calculator_tests.cpp  sprite_tests.cpp
tests/src/world/: entity_tests.cpp  world_tests.cpp
tests/src/world/events/: eventqueue_tests.cpp
tests/test_doubles/fakes/: fake_system.cpp
tests/world/: entity_tests.cpp  world_tests.cpp
tests/world/events/: eventqueue_tests.cpp  fake_event.cpp  fake_eventprocessor.cpp  spy_eventqueueport.cpp
tests/world/test_doubles/fakes/: fake_component.cpp
tests/world/test_doubles/stubs/: stub_eventqueue.cpp
